# testExample

./: .gitignore  stack.yaml  testExample.cabal
src/: ExampleTesting.hs  StringConversion.hs
