name: testExample
version: 0.0.1
cabal-version: >=1.20
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
synopsis: example for testing with HTF
description:


author: Andrew U. Frank

library
    build-depends:
        base >=4.8 && <= 5,
        network-uri,
        monads-tf,
        HTF,
        bytestring,
        text, utf8-string,
        -- for testing
        test-invariant,
        quickcheck-text,
        numeric-prelude,
        snap-core,
        safe,
        vector,
        -- fay-base,
        split,
        data-easy
--        uniform-algebras
    exposed-modules:
        StringConversion
    --     Uniform.Strings
    -- -- for testing, afterwards include in test-suite
    --     Uniform.StringConversion
    --     Uniform.StringUtilities
    --     Uniform.StringInfix
    default-language: Haskell2010
    hs-source-dirs: src

executable testExample
    main-is:    ExampleTesting.hs
    build-depends: base, HTF
        , safe
        -- , test-framework  -- clash with HTF
        , test-invariant
        , text
        , snap-core
        , network-uri
        , bytestring
        , quickcheck-text
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        StringConversion

Test-Suite stringTestAuto
    type:       exitcode-stdio-1.0
    main-is:    ExampleTesting.hs
    build-depends: base, HTF
        , safe
        -- , test-framework
        , test-invariant
        , text
        , snap-core
        , network-uri
        , bytestring
        , quickcheck-text
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        StringConversion
